share/cascade/test/regression/type_check/fail/instantiation_2.v
// Duplicate explicit port connections

module foo(x);
  input wire x;
  input wire y;
  input wire z;
endmodule

wire x;
foo f(.x(x), .x(x));

initial $finish;
